# SimpleRenderer

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: shape.h
core/src/: geometry.cpp  shape.cpp  transform.cpp
include/: geometry.h  interaction.h  spectrum.h  sr.h  transform.h
main/: CMakeLists.txt
shape/: CMakeLists.txt
shape/include/: sphere.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Medium.cpp  Medium.h  geometry.cpp  geometry.h  interaction.cpp  interaction.h  medium.cpp  medium.h  shape.cpp  shape.h  spectrum.cpp  sr.h  transform.cpp  transform.h
src/main/: CMakeLists.txt  main.cpp
src/shape/: CMakeLists.txt  sphere.cpp  sphere.h
